2005-07-17 15:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Added code to prevent memory leak
	with previous change.

2005-07-17 15:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Removed AUTORELEASE for 
	subClassesArray, it was causing a crash.
	* GormCore/GormClassInspector.m: setObject: conditional which 
	prints a warning if a non-GormClassProxy class is passed in.
	* GormCore/GormPrivate.m: initWithClassName: conditional which
	prints a warning if a non-string is used to initialize th
	GormClassProxy.

2005-07-17 08:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInternalViewEditor.m: -init, prepareForDragOperation:,
	performDragOperation: removed uneeded IBFormatterPboardType from
	the list.

2005-07-16 23:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassInspector.m: -_refreshView removed
	call to deselectAll: for the actionTable and outletTable.
	On occasion this was causing the application to go into a 
	notification-update loop.

2005-07-15 21:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: -init, changed NSLog to 
	NSDebugLog.

2005-07-15 00:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Added exception handling to portions 
	of code which call itemAtIndex: method on the outline view to 
	prevent any problems.
	* GormCore/GormInspectorsManager.m: Changed a NSLog to NSDebugLog.

2005-07-14 12:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Minor change to changeView: to
	switch to the appropriate toolbar item when the view changes 
	automatically while dragging.  Also a change to awakeFromNib
	to select the correct item on startup.

2005-07-14 09:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Implement toolbarSelectableItemIdentifiers