@@ -25,6 +25,7 @@
 
 #include <AppKit/AppKit.h>
 #include <GNUstepGUI/GSNibTemplates.h>
+#include <InterfaceBuilder/InterfaceBuilder.h>
 #include "GormNSPanel.h"
 
 static unsigned int defaultStyleMask = NSTitledWindowMask | NSClosableWindowMask
@@ -107,5 +108,24 @@ static unsigned int defaultStyleMask = NSTitledWindowMask | NSClosableWindowMask
 - (void) setAutoPositionMask: (unsigned int)mask
 {
   autoPositionMask = mask;
+}
+
+- (void) orderWindow: (NSWindowOrderingMode)place relativeTo: (int)otherWin
+{
+  id<IBDocuments> document = [(id<IB>)NSApp documentForObject: self];
+  [super orderWindow: place relativeTo: otherWin];
+  if([NSApp isConnecting] == NO)
+    { 
+      id editor = [document editorForObject: self create: NO];
+
+      // select myself.
+      if([editor respondsToSelector: @selector(selectObjects:)])
+	{
+	  [editor selectObjects: [NSArray arrayWithObject: self]];
+	}
+
+      [document setSelectionFromEditor: editor];
+      [editor makeSelectionVisible: YES];
+    }
 }
 @end
